--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "angular-resource": "~1.0.5",
     "angular-cookies": "~1.0.5",
     "angular-sanitize": "~1.0.5",
-    "jquery": "~2.0.3"
+    "jquery": "~2.0.3",
+    "angular-camera": "~0.1.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.5",
